static/ambition/css/ambition-all.css
body {
	font: 14px 'Helvetica', 'Arial', sans-serif;	
	color: #777;
	background-color: #f5f5f9;
}

table {
	text-align: left;
	border: 1px solid #bbb;
	border-collapse: separate;
	border-spacing: 0px;
	border-radius: 5px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
}

th {
	text-align: inherit; /* IE (all versions) fix, doesn't implicitly inherit from table */
	width: 200px;
	height: 50px;
	padding: 0px 8px;
	border-left: 1px solid #bbb;
	border-top: 1px solid #bbb;
}

tbody tr:nth-child(even) {
	background-color: #f6f6f6;
}

td {
	width: 200px;
	height: 30px;
	padding: 10px 8px;
	border-left: 1px solid #bbb;
	border-top: 1px solid #bbb;
}

td:first-child, th:first-child {
	border-left: none;
}

#competitor-table-container {
	width: 800px;
	background-color: white;
	margin: 0 auto;
}

#competitor-table-title {
	font-size: 24px;	
	font-weight: normal;
	border-top: none;
}

#competitor-table-heading th {
	cursor: pointer;
	box-shadow: 0px 2px 5px -1px #bbb;
	-moz-box-shadow: 0px 2px 5px -1px #bbb;
	-webkit-box-shadow: 0px 2px 5px -1px #bbb;
}

#competitor-table-summary {
	font-size: 18px;
	color: #999;
}

